# geosquare-grid

./: .gitignore  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
