[metadata]
name = geosquare-grid
version = 0.1.0
description = A library for converting between geographic coordinates and grid identifiers (GIDs).
long_description = file: README.md
long_description_content_type = text/markdown
author = Geosquare Team
author_email = admin@geosquare.ai
url = https://github.com/geosquareai/geosquare-grid
license = Apache-2.0
keywords = geospatial, grid, coordinates, GID
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    shapely >=1.8.0

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    geosquare-grid = geosquare_grid:main